--- a/cms/css/main.css
+++ b/cms/css/main.css
@@ -15,6 +15,10 @@ body, p, div {
 	font-size: 13px;
 }
 
+h1, h2, h3, h4, h5, h6, p, div, body {
+	font-family: Lato !important;
+}
+
 img {
 	padding: 10px;
 }
