--- a/cms/include/agenda.html
+++ b/cms/include/agenda.html
@@ -5,16 +5,19 @@
 			<md-card-title-text>
 				<span class="md-headline">{{ag.name}}</span>
 				<span layout-wrap wrap layout="row" class="md-subhead">
-					<label flex="30"><span>Data i godzina rozpoczęcia</span>
+					<label flex="25"><span>Data i godzina rozpoczęcia</span>
 						<div class="start-dateTime">{{ag.start_date}} {{ag.start_time}}</div>
 					</label> 
-					<label flex="30"><span>Data i godzina zakończenia</span>
+					<label flex="25"><span>Data i godzina zakończenia</span>
 						<div class="stop-dateTime">{{ag.stop_date}} {{ag.stop_time}}</div>
 					</label> 
-					<label flex="30"><span>Trener</span>
+					<label flex="25" ng-show="ag.first_name !== null"><span>Trener</span>
 						<div class="trainer">{{ag.first_name}} {{ag.last_name}}</div>
 					</label> 
-					<label flex="100"><span>Opis</span>
+					<label flex="25"><span>Ścieżka</span>
+						<div class="trainer">{{ag.path}}</div>
+					</label> 
+					<label flex="100" ng-show="ag.description !== ''"><span>Opis</span>
 						<div class="description">{{ag.description}}</div>
 					</label> 
 				</span>
