--- a/cms/include/agendaNew.html
+++ b/cms/include/agendaNew.html
@@ -33,8 +33,15 @@
 		</md-input-container>
 
 		<md-input-container flex="100">
+			<label>Ścieżka</label>
+			<md-select name="trainer" ng-model="element.path_id" required>
+				<md-option ng-value="path.id" ng-repeat="path in paths">{{path.name}}</md-option>
+			</md-select>
+		</md-input-container>
+
+		<md-input-container flex="100">
 			<label>Opis</label>
-			<textarea name="description" ng-model="element.description" required md-maxlength="3000"></textarea>
+			<textarea name="description" ng-model="element.description" md-maxlength="3000"></textarea>
 		</md-input-container>
 
 		<div class="actions-row" layout="row" layout-align="end center">
