--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,34 @@ body, html {
 }
 
 body, p, div {
-	font-size: 13px;
+	font-size: 15px;
+}
+
+h1, h2, h3, h4, h5, h6, p, div, body {
+	font-family: Lato !important;
 }
 
 img {
 	padding: 10px;
+}
+
+div.event-logo-container {
+	display: inline;
+	top: 50px;
+    float: right;
+    margin-right: 50px;
+    margin-top: -60px;
+}
+
+img.event-logo {
+	max-width: 250px;
+	max-height: 130px;
+	width: auto;
+	height: auto;
+}
+
+md-pagination-wrapper {
+	width: 100% !important;
 }
 
 md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar), 
@@ -24,6 +47,8 @@ md-fab-speed-dial.md-fab-bottom-right button,  md-fab-speed-dial.md-fab-bottom-c
 	background-color: #1468b3!important;
 	color: #fff;
 	padding: 0 5%;
+	min-height: 140px;
+	display: block;
 }
 
 md-content md-input-container {
@@ -46,8 +71,11 @@ md-content md-input-container.img-upload .file-input::-webkit-file-upload-button
 
 h1.md-display-1 {
 	box-shadow: 0 2px 1px -1px rgba(0,0,0,.12);
-	padding-bottom: 10px;
+	padding-bottom: 15px;
+	font-size: 25px;
+	margin-top: 5px;
 }
+
 md-card img, md-card>:not(md-card-content) img {
 	max-width: 100%;
 	max-height: 100%;
@@ -77,14 +105,20 @@ md-card.important {
 md-toolbar h1 {
 	font-size: 35px !important;
 	line-height: 45px !important;
-	padding-top: 20px !important;
+	padding-top: 30px !important;
 	padding-left: 25px !important;
+	width: auto !important
+	display: inline !important;
+	float: left;
+	left: 0;
 }
 
 md-toolbar h4 {
 	line-height: 25px;
-	padding-top: 5px;
-	padding-left: 50px;
+	padding-left: 150px;
+	display: inline !important;
+	float: left;
+	left: 0;
 }
 
 md-content md-input-container.img-upload .file-input:hover::before {
@@ -220,6 +254,10 @@ md-fab-actions button md-icon {
 md-card md-card-title md-card-title-text span {
 	font-weight: bold;
 	font-size: 15px;
+}
+
+md-card md-card-title md-card-title-text label {
+	font-weight: normal;
 }
 
 md-card md-card-title md-card-title-text .md-subhead {
@@ -383,6 +421,24 @@ md-grid-list.dashboard md-grid-tile h1.md-grid-tile-content-min {
 .text-editor-container {
 	width: 100%;
 	padding: 0;
+}
+
+md-dialog form.agenda-element md-toolbar {
+	height: 64px;
+	min-height: 64px;
+	padding: 0px;
+}
+
+md-dialog form.agenda-element .md-dialog-content {
+	padding: 10px 24px;
+}
+
+
+md-dialog form.agenda-element .md-dialog-content h4 {
+	color: rgb(51, 51, 51);
+	font-size: 20px;
+	padding-left: 0;
+	font-weight: normal;
 }
 
 @media (min-width: 960px) {
